# artig

./: .gitignore  Cargo.toml  LICENSE  README.md  generated-sources.json  org.hmmm.artig.desktop  org.hmmm.artig.yml
.flatpak/: rust-analyzer.sh
src/: main.rs
