[package]
name = "tez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
arti = { version = "0.5.0", features = ["static-native-tls"] }
arti-client = "0.4.1"
tor-rtcompat = "0.5.0"
gtk = { version = "0.4.8", package = "gtk4" }
glib = "0.15.12"
adw = { version = "0.1.1", package = "libadwaita" }
